--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hacknyu-2023",
+  "name": "flyout",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
+    "@next/font": "^14.1.0",
     "axios": "^1.3.3",
     "got": "^12.5.3",
     "jsdom": "^21.1.0",
-    "next": "^13.1.6",
+    "next": "^14.1.0",
     "puppeteer": "^19.7.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-spinners": "^0.13.8"
   }
 }
